# simple-monitor-in-cpp-lll2yu

./: CMakeLists.txt  README.md  printer.cpp  test-vitalchecker.cpp  vitalchecker.cpp
.github/workflows/: main-workflow.yml
include/: printer.h  vitalchecker.h
locales/en/: vitalchecker.po
locales/ger/: vitalchecker.po
locales/ja/: vitalchecker.po
